public/css/style.css
/* ... */
b,strong {
	font-weight:700;
}

blockquote {
	margin:1em 40px;
}

dfn {
	font-style:italic;
}

hr {
	display:block;
	height:1px;
	border:0;
	border-top:1px solid #ccc;
	margin:1em 0;
	padding:0;
}

ins {
	background:#ff9;
	color:#000;
	text-decoration:none;
}

mark {
	background:#ff0;
	color:#000;
	font-style:italic;
	font-weight:700;
}

/* Redeclare monospace font family: h5bp.com/j */
pre,code,kbd,samp {
	font-family:monospace,serif;
	_font-family:'courier new',monospace;
	font-size:1em;
}

/* Improve readability of pre-formatted text in all browsers */
pre {
	white-space:pre;
	white-space:pre-wrap;
	word-wrap:break-word;
}

q {
	quotes:none;
}

q:before,q:after {
	content:"";
	content:none;
}

small {
	font-size:85%;
}

/* Position subscript and superscript content without affecting line-height: h5bp.com/k */
sub,sup {
	font-size:75%;
	line-height:0;
	position:relative;
	vertical-align:baseline;
}

sup {
	top:-.5em;
}

sub {
	bottom:-.25em;
}

/* =============================================================================
   Lists
   ========================================================================== */
ul,ol {
	margin:1em 0;
	padding:0 0 0 40px;
}

dd {
	margin:0 0 0 40px;
}

nav ul,nav ol {
	list-style:none;
	list-style-image:none;
	margin:0;
	padding:0;
}

/* =============================================================================
   Embedded content
   ========================================================================== */
/*
 * 1. Improve image quality when scaled in IE7: h5bp.com/d
 * 2. Remove the gap between images and borders on image containers: h5bp.com/e
 */
img {
	border:0;
	-ms-interpolation-mode:bicubic;
	vertical-align:middle;
}

/*
 * Correct overflow not hidden in IE9
 */
svg:not(:root) {
	overflow:hidden;
}

/* =============================================================================
   Figures
   ========================================================================== */
figure {
	margin:0;
}

/* =============================================================================
   Forms
   ========================================================================== */
form {
	margin:0;
}

fieldset {
	border:0;
	margin:0;
	padding:0;
}

/* Indicate that 'label' will shift focus to the associated form element */
label {
	cursor:pointer;
}

/*
 * 1. Correct color not inheriting in IE6/7/8/9
 * 2. Correct alignment displayed oddly in IE6/7
 */
legend {
	border:0;
	*margin-left:-7px;
	padding:0;
}

/*
 * 1. Correct font-size not inheriting in all browsers
 * 2. Remove margins in FF3/4 S5 Chrome
 * 3. Define consistent vertical alignment display in all browsers
 */
button,input,select,textarea {
	font-size:120%;
	margin:0;
	vertical-align:baseline;
	*vertical-align:middle;
}
textarea{
    width: 98%;
}

/*
 * 1. Define line-height as normal to match FF3/4 (set using !important in the UA stylesheet)
 * 2. Correct inner spacing displayed oddly in IE6/7
 */
button,input {
	line-height:normal;
	*overflow:visible;
}

/*
 * Reintroduce inner spacing in 'table' to avoid overlap and whitespace issues in IE6/7
 */
table button,table input {
	*overflow:auto;
}

/*
 * 1. Display hand cursor for clickable form elements
 * 2. Allow styling of clickable form elements in iOS
 */
button,input[type="button"],input[type="reset"],input[type="submit"],[role="button"] {
	cursor:pointer;
	-webkit-appearance:button;
}

/*
 * Consistent box sizing and appearance
 */
input[type="checkbox"],input[type="radio"] {
	box-sizing:border-box;
	padding:0;
}

input[type="search"] {
	-webkit-appearance:textfield;
	-moz-box-sizing:content-box;
	-webkit-box-sizing:content-box;
	box-sizing:content-box;
}

input[type="search"]::-webkit-search-decoration {
	-webkit-appearance:none;
}

/*
 * Remove inner padding and border in FF3/4: h5bp.com/l
 */
button::-moz-focus-inner {
	border:0;
	padding:0;
}

/*
 * 1. Remove default vertical scrollbar in IE6/7/8/9
 * 2. Allow only vertical resizing
 */
textarea {
	overflow:auto;
	vertical-align:top;
	resize:vertical;
}
textarea, input[type="text"]{
    padding: 1%;
    margin: 0;
    border: 1px #ccc solid;
    border-radius: 3px;
    box-shadow: 0 1px 3px 0 #ccc inset;
}

/* Colors for form validity */
input:valid,textarea:valid {
}

input:invalid,textarea:invalid {
	background-color:#f0dddd;
}

/* =============================================================================
   Tables
   ========================================================================== */
table {
	border-collapse:collapse;
	border-spacing:0;
}

td {
	vertical-align:top;
}

/* =============================================================================
   Google Form Styles
   ========================================================================== */

.ss-form{
    padding: 3% 5%;
}

.ss-form-input {
	vertical-align:middle;
	margin-top:0;
}
input[type="text"]{
    width: 98%;
    line-height: 1.6em;
}
select{
    width: 98%;
    line-height: 1.6em;
}

.g {
	color:#666;
}

.ss-q-title {
	font-weight:700;
	background:#f6f6f6;
	background:#fff;
	padding:3px;
	margin:0 -12px;
	margin-bottom:10px;
	padding-left:15px;
}

.ss-form-desc {
	margin:3% 5%;
	color:#4f4f4f;
}

.ss-q-help {
	color:#666;
	margin: 1em .4em;
}

.ss-q-long {
/* 	max-width:90%; */
}

.ss-form-entry {
	margin-bottom:1.5em;
}
.ss-form-entry input[type="submit"]{
    position: relative;
    background: #828693;
    background: -webkit-linear-gradient(#828693 0%, #455A69 100%);
    border-radius: 2px;
    border: 1px solid #081A25; 
    font-weight: bold;
    padding: 0.8em 0;
    color: #fff;
    -webkit-appearance: none;
    width: 100%;
    text-shadow: 0 -1px 0 #081A25;
    box-shadow: 0 1px 3px 0 rgba(0,0,0,0.5), 0 2px 0 0 rgba(255,255,255,0.2) inset;
}
/* ... */

